--- a/OOP-Spring-2015.csproj
+++ b/OOP-Spring-2015.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuyTransaction.cs" />
@@ -46,10 +47,14 @@
     <Compile Include="StringSystem.cs" />
     <Compile Include="StringSystemCLI.cs" />
     <Compile Include="StringSystemCommandParser.cs" />
+    <Compile Include="Test\TestUser.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
